src/objects/KS_Entrega__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto de integración SAP para traer entregas de clientes</description>
    <fields>
        <fullName>KS_Cantidad_total_de_bultos_de_entrega__c</fullName>
        <label>Cantidad total de bultos de entrega</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Clase_de_entrega__c</fullName>
        <label>Clase de entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_entrega</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Condicion_de_expedicion__c</fullName>
        <label>Condición de expedición</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_expedicion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Destinatario__c</fullName>
        <label>Destinatario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Entrega_completa_por_pedido__c</fullName>
        <label>¿Entrega completa por pedido?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Estado_de_entrega</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_creacion_del_registro__c</fullName>
        <label>Fecha de creación del registro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_entrega__c</fullName>
        <label>Fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_movimiento_de_mercancias_real__c</fullName>
        <label>Fecha movimiento de mercancías real</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_prevista_para_movimiento__c</fullName>
        <label>Fecha prevista para movimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Hora_registrada__c</fullName>
        <label>Hora registrada</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_1__c</fullName>
        <label>Incoterms parte 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_2__c</fullName>
        <label>Incoterms parte 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_Entrega__c</fullName>
        <externalId>true</externalId>
        <label>Número Entrega</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Numero_Personal__c</fullName>
        <label>Número Personal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Peso_neto__c</fullName>
        <label>Peso neto</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Peso_total__c</fullName>
        <label>Peso total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Prioridad_de_entrega__c</fullName>
        <label>Prioridad de entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Prioridad_de_entrega</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitante</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entregas</relationshipLabel>
        <relationshipName>Entregas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Transportista__c</fullName>
        <label>Transportista</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Unidad_de_peso__c</fullName>
        <label>Unidad de peso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Unidad_de_volumen__c</fullName>
        <label>Unidad de volumen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Volumen__c</fullName>
        <label>Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Entrega</label>
    <nameField>
        <label>Entrega</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entregas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>